--- a/admin/scss/_style.scss
+++ b/admin/scss/_style.scss
@@ -131,7 +131,7 @@ body.cms {
 
 		.section-icon {
 			opacity: 0.2;
-			padding-right: 4px;
+			margin-right: 4px;
 			background-repeat: no-repeat;
 		}
 	}
